--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 plugins:
   - jekyll-remote-theme
-
+  - jekyll-seo-tag
+  
 remote_theme: jonaharagon/jekyll-bootstrap-theme
 
 title: 🧩 Open Research Platforms
