--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 plugins:
   - jekyll-remote-theme
-  - jekyll-seo-tag
   
 remote_theme: jonaharagon/jekyll-bootstrap-theme
 
@@ -17,7 +16,7 @@ permalink: pretty
 collections:
   platforms:
     output: true
-    permalink: /:name/
+    permalink: /:name
 
 defaults:
   -
@@ -33,5 +32,6 @@ bootstrap:
     linkedin: 'https://linkedin.com/in/casey-gollan'
   header_pages:
    - index.md
-   - criteria.md
+   - compare.md
+   - evaluate.md
    - why.md
